[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/chatBox/chatBox.gd" type="Script" id=1]

[node name="chatbox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -880.0
offset_bottom = -477.0
script = ExtResource( 1 )

[node name="textHolder" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="pastText" type="RichTextLabel" parent="textHolder"]
offset_right = 400.0
offset_bottom = 215.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true

[node name="inputField" type="HBoxContainer" parent="textHolder"]
offset_top = 219.0
offset_right = 400.0
offset_bottom = 243.0

[node name="playerInput" type="LineEdit" parent="textHolder/inputField"]
offset_right = 400.0
offset_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "SHIFT+ENTER to chat, Esc to exit"
placeholder_alpha = 0.233

[connection signal="focus_entered" from="textHolder/inputField/playerInput" to="." method="_on_playerInput_focus_entered"]
[connection signal="focus_exited" from="textHolder/inputField/playerInput" to="." method="_on_playerInput_focus_exited"]
[connection signal="text_submitted" from="textHolder/inputField/playerInput" to="." method="_on_playerInput_text_entered"]
